--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - 01.preliminaries.qmd
     - 02.python-basics.qmd
     - 03.python-builtin.qmd
+    - 04.numpy-basics.qmd
 
 bibliography: references.bib
 
